<resources>
    <string name="app_name">如意</string>
    <string name="netError">网络连接失败</string>
    <string name="login">登录</string>
    <string name="pleaseInputPhone">请输入手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginHint">登录享受更精彩</string>
    <string name="phone">手机号</string>
    <string name="verify">验证码</string>
    <string name="getVerify">获取验证码</string>
    <string name="inputVerify">请输入验证码</string>
    <string name="registerWelcome">欢迎加入优选</string>
    <string name="registerWelcomeHint">欢迎加入</string>
    <string name="register">注册</string>
    <string name="test">123456</string>
    <string name="phoneTest">手机号：12345678901</string>
    <string name="moneyDetail">成交明细</string>
    <string name="authentication">实名认证</string>
    <string name="bankCard">银行卡</string>
    <string name="deal">交易</string>
    <string name="moneyManagement">理财</string>
    <string name="hotProduct">热门产品</string>
    <string name="percentSign">%</string>
    <string name="rateOfReturn">一年回报率</string>
    <string name="testFont">啊啊啊啊啊啊</string>
    <string name="name">姓名</string>
    <string name="pleaseInputName">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="pleaseCheckSex">请选择性别</string>
    <string name="cardNumber">身份证号</string>
    <string name="pleaseInputCardNumber">请输入身份证号</string>
    <string name="confirm">确认</string>
    <string name="reportBack">一年回报率</string>
    <string name="buyPrice">起购金额（元）</string>
    <string name="moneyProductMessage">基金概况</string>
    <string name="productName">产品全称</string>
    <string name="productCode">产品代码</string>
    <string name="productCompany">基金公司</string>
    <string name="productRisk">风险等级</string>
    <string name="productType">产品类型</string>
    <string name="productPrice">起购金额</string>
    <string name="buy">立即购买</string>
    <string name="addBankCard">添加银行卡</string>
    <string name="bankName">所属银行</string>
    <string name="bankCardNumber">卡号</string>
    <string name="pleaseInputBankCardNumber">请输入银行卡号</string>
    <string name="buyIn">买入</string>
    <string name="huoqi">活期</string>
    <string name="dingqi">定期</string>
    <string name="huidui">汇兑</string>
    <string name="myDeal">我的交易</string>
    <string name="buyOut">卖出</string>
    <string name="queryOrder">成交查询</string>
    <string name="dealDetail">交易明细</string>
    <string name="takeFront">拍摄正面</string>
    <string name="takeReverse">拍摄反面</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="uploadBankPic">上传银行卡图片</string>
    <string name="rmbBuy">人民币购汇</string>
    <string name="outFinish">外币结汇</string>
    <string name="moneyType">币种</string>
    <string name="finishMoneyHuilv">结钞汇率</string>
    <string name="gouhuihuilv">购汇汇率</string>
    <string name="huoqilicai">活期理财</string>
    <string name="buyTime">定投周期</string>
    <string name="investTime">投资期限</string>
    <string name="orderName">名称</string>
    <string name="ordePrice">金额</string>
    <string name="reportRate">回报率</string>
    <string name="orderTime">成交时间</string>
    <string name="pleaseInputBuyPrice">请输入购买金额</string>
    <string name="sellOut">卖出</string>
    <string name="outLogin">退出登录</string>
    <string name="earnings">收益</string>
    <string name="order_detailMessage">订单概况</string>
    <string name="orderDetail">订单详情</string>
    <string name="orderNumber">订单编号</string>
    <string name="orderMoney">订单金额</string>
    <string name="orderStatus">订单状态</string>
    <string name="message">备注</string>
    <string name="payStatus">订单状态</string>
    <string name="sellOrderTime">卖出时间</string>
    <string name="sellPrice">卖出金额</string>
    <string name="income">收益</string>
    <string name="payTime">付款时间</string>
</resources>