<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.mine.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/iv_login_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:background="@mipmap/bg_login">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_65"
            android:text="@string/registerWelcomeHint"
            android:textColor="@color/white"
            android:textSize="27dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_register_title"
            android:layout_alignStart="@id/tv_register_title"
            android:layout_marginTop="@dimen/dp_14"
            android:text="@string/registerWelcome"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_login_logo"
        android:layout_marginTop="-30dp"
        android:background="@drawable/bg_login">

        <TextView
            android:id="@+id/tv_phone_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/phone"
            android:textColor="@color/hintTextColor"
            android:textSize="@dimen/dp_13" />

        <EditText
            android:id="@+id/et_register_username"
            style="@style/loginInputStyle"
            android:layout_below="@id/tv_phone_hint"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@mipmap/ic_phone"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/line_et_bg"
            android:paddingEnd="@dimen/dp_17"
            android:hint="@string/pleaseInputPhone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_verify_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_register_username"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/verify"
            android:textColor="@color/hintTextColor"
            android:textSize="@dimen/dp_13" />

        <LinearLayout
            android:id="@+id/rl_verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_below="@id/tv_verify_hint"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="21.5dp"
                android:layout_weight="2"
                android:background="@drawable/line_et_bg"
                android:hint="@string/inputVerify"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_16"
                android:textColor="@color/alwaysTextColor"
                android:textColorHint="@color/alwaysTextColor"
                android:textSize="@dimen/dp_15" />

            <TextView
                android:id="@+id/tv_get_register_verify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bt_verify"
                android:gravity="center"
                android:text="@string/getVerify"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/rl_verify"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dp_65"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/dp_65"
            android:background="@drawable/bg_them_click"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/whiteBg"
            android:textSize="18dp" />
    </RelativeLayout>


</RelativeLayout>