<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_32">

    <TextView
        android:id="@+id/tv_query_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxWidth="@dimen/dp_80"
        android:singleLine="true"
        android:text="@string/orderName"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_query_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:text="@string/ordePrice"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="@+id/tv_query_shouyi"
        app:layout_constraintEnd_toStartOf="@+id/tv_query_shouyi"
        app:layout_constraintTop_toTopOf="@+id/tv_query_shouyi" />

    <TextView
        android:id="@+id/tv_query_shouyi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_18"
        android:text="@string/earnings"
        android:minWidth="@dimen/dp_50"
        android:singleLine="true"
        android:gravity="end"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/dp_12"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/tv_query_time"
        app:layout_constraintEnd_toStartOf="@id/tv_query_time"
        app:layout_constraintTop_toTopOf="@id/tv_query_time" />

    <TextView
        android:id="@+id/tv_query_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:text="@string/orderTime"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>