<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.deal.sell.SellFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_buy_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/orderName"
            android:textColor="@color/alwaysTextColor"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/ordePrice"
            android:textColor="@color/alwaysTextColor"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderStatus"
            android:visibility="visible"
            android:layout_marginEnd="@dimen/dp_60"
            android:textColor="@color/alwaysTextColor"
            android:textSize="@dimen/dp_12"
             app:layout_constraintEnd_toStartOf="@id/textView7"
            app:layout_constraintTop_toTopOf="@id/textView7"
            app:layout_constraintBottom_toBottomOf="@id/textView7"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:text="@string/sellOrderTime"
            android:textColor="@color/alwaysTextColor"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_sell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cl_buy_hint">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sell_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</RelativeLayout>